docs: update rules.md

--- a/.rules.md
+++ b/.rules.md
@@ -97,7 +97,7 @@ bun run dev
 bunx tsc --noEmit
 
 # Database operations
-bun run db:generate    # Generate migration after schema change
+bun run db:generate --name <migration_name>  # Generate migration after schema change (always use --name)
 bun run db:migrate     # Apply pending migrations
 bun run db:studio      # Open Drizzle Studio
 
@@ -229,6 +229,9 @@ function FilesRoute() {
 - Preserve UX stability (avoid layout flicker, keep action placement consistent).
 - All user-facing UI strings must use Lingui (`Trans` or equivalent wrappers).
 - Use shadcn/ui components from `components/ui/` — never create custom base UI components.
+- For confirmation dialogs, use `confirmDialog(title, description)` from `@/shared/lib/confirmDialog` — never use `window.confirm` or inline `AlertDialog` for this purpose.
+- For prompt dialogs, use `promptDialog(title, description)` from `@/shared/lib/promptDialog` (if it exists) — never use `window.prompt` or inline dialogs.
+- Do not import `AlertDialog` or similar primitives directly into feature components just for confirmation — use the shared utilities above.
 - Tailwind CSS v4 via `@tailwindcss/vite` for all styling; never inline custom styles.
 - Use `cn()` from `@/shared/lib/utils` for conditional className merging:
   ```typescript
@@ -279,8 +282,11 @@ Files UI uses `@tanstack/react-table` with:
 ## 8) Data and Persistence
 
 - Schema changes must update `packages/db/schema/*`.
-- Schema changes must include migrations in `packages/db/migrations/*` (unless explicitly told otherwise).
-- Update migration journal (`meta/_journal.json`) when required.
+- Schema changes must include migrations generated via drizzle-kit — **never write migration SQL by hand**:
+  ```bash
+  bun run db:generate --name <descriptive_name>
+  ```
+- Never manually edit generated migration SQL files or `meta/_journal.json`.
 - For new required fields, use safe rollout: nullable → backfill → enforce not null.
 - Never clear persisted history for UI-only behavior unless explicitly requested.
 - Soft deletes: Set `isDeleted: true` instead of hard-deleting records.
@@ -318,11 +324,12 @@ Before finishing:
 1. **Forgetting codegen**: GraphQL schema changes require running `bun run codegen` in both API and web
 2. **Direct file mutations**: Use mutations with optimistic updates, not manual cache updates
 3. **Provider cleanup**: Always call `provider.cleanup()` in finally blocks
-4. **Schema migrations**: Update `_journal.json` when adding migrations manually
+4. **Manual migrations**: Never write migration SQL by hand — always use `bun run db:generate --name <name>`
 5. **Route business logic**: Keep routes thin — move logic to hooks in `features/`
 6. **Session cleanup**: Failed uploads must cleanup DB records and temp files
 7. **File size**: Split files exceeding 300 LoC into focused modules
 8. **UI inconsistency**: Always use existing shadcn/ui components, never create custom base components
+9. **Inline confirm/prompt dialogs**: Use `confirmDialog` / `promptDialog` from `@/shared/lib/` — never `window.confirm`, `window.prompt`, or raw `AlertDialog` imports in feature components
 
 ## Key Files to Reference
 
@@ -332,3 +339,4 @@ Before finishing:
 - Upload worker: `apps/api/queue/upload-worker.ts`
 - Web hooks pattern: `apps/web/src/features/files/hooks/useFiles.ts`
 - Encryption utils: `apps/api/utils/encryption.ts`
+- Confirm dialog utility: `apps/web/src/shared/lib/confirmDialog.tsx`
